--- a/200207_과제/kor/html/index.html
+++ b/200207_과제/kor/html/index.html
@@ -11,7 +11,7 @@
 	<script src="../../common/js/jquery-1.9.1min.js"></script>
 	<script src="../../common/js/common.js"></script>
 </head> 
-<body>
+<body><!-- 커밋 확인 -->
 	<div class="skip_nav">
 		<a href="#gnb">상단 메뉴 바로가기</a>
 		<a href="#container">본문 바로가기</a>
