--- a/200207_과제/kor/html/history/sub_history_08.html
+++ b/200207_과제/kor/html/history/sub_history_08.html
@@ -1,4 +1,6 @@
+﻿<link type="text/css" rel="stylesheet" href="../../common/css/dream.css" />
 <link type="text/css" rel="stylesheet" href="../../common/css/history.css" />
+
 		<div id="content_area_sub_main">
 			<section>
 				<div class="sub_visual n_04">
